--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dev_dependencies:
   build_runner: ^2.1.11
   json_serializable: ^6.3.0
   freezed: ^2.0.4
+  sqflite_common_ffi: ^2.1.1+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
